--- a/JC/JC/css/estilo.css
+++ b/JC/JC/css/estilo.css
@@ -8,3 +8,11 @@ body{
 .nav{
     margin-bottom: 47px;
 }
+
+#map {
+    height: 500px;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
